--- a/src/sass/components/head.scss
+++ b/src/sass/components/head.scss
@@ -21,7 +21,7 @@
         height: 4rem;
         width: 40rem;
         border-radius: 15px;
-        font-size: 1.4rem;
+        font-size: 1.7rem;
     }
 
     button {
@@ -39,13 +39,48 @@
     }
 
     .card {
-        outline: none;
         border: none;
+        outline: none;
         border-radius: 15px;
         position: absolute;
         background: #fff;
         height: 11rem;
         width: 78%;
         margin-top: 13.5rem;
+        z-index: 100;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+
+        .content {
+            align-self: center;
+            height: 50%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            &:not(:last-child) {
+                border-right: solid 1.3px;
+                color:#2b2b2b;
+            }
+
+            h3 {
+                color: #969696;
+                margin-top: -2rem;
+                margin-bottom: 1rem;
+                margin-left: 2rem;
+                font-family: Open Sans, sans-serif;
+                font-size: 1rem;
+                font-weight: 700;
+                letter-spacing: 2px;
+            }
+
+            p {
+                color: #000;
+                margin-left: 2rem;
+                font-family: Open Sans, sans-serif;
+                font-size: 2rem;
+                font-weight: 700;
+            }
+        }
     }
 }
