--- a/src/sass/components/head.scss
+++ b/src/sass/components/head.scss
@@ -66,7 +66,7 @@
             height: 50%;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: space-between;
 
             &:not(:last-child) {
                 border-right: solid 1.3px;
@@ -75,21 +75,24 @@
 
             h3 {
                 color: #969696;
-                margin-top: -2rem;
-                margin-bottom: 1rem;
-                margin-left: 2rem;
+                margin-top: -.5rem;
+                margin-left: 2.5rem;
                 font-family: Open Sans, sans-serif;
                 font-size: 1rem;
                 font-weight: 700;
                 letter-spacing: 2px;
             }
 
-            p {
-                color: #000;
-                margin-left: 2rem;
-                font-family: Open Sans, sans-serif;
-                font-size: 2rem;
-                font-weight: 700;
+            .box {
+                height: 80%;
+
+                p {
+                    color: #000;
+                    margin-left: 2.5rem;
+                    font-family: Open Sans, sans-serif;
+                    font-size: 2rem;
+                    font-weight: 700;
+                }
             }
         }
     }
