--- a/src/sass/components/head.scss
+++ b/src/sass/components/head.scss
@@ -1,6 +1,7 @@
 .head {
     position: relative;
-    height: 19rem;
+    //height: 19rem;
+    height: 30rem;
     background-image: url('../../images/back.png');
     background-size: cover;
     display: flex;
