--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,7 @@
 // Globals 🌍🌎🌏
 @import '../sass/global/global';
 @import '../sass/global/variables';
+@import '../sass/global/mixin';
 
 
 // Components 🤖
