--- a/src/sass/components/head.scss
+++ b/src/sass/components/head.scss
@@ -1,18 +1,17 @@
 .head {
     position: relative;
-    //height: 19rem;
     height: 28rem;
     background-image: url('../../images/back.png');
     background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: solid;
 
     h1 {
         font-family: Rubik, sans-serif;
         color: #fff;
         font-size: 2.8rem;
-        // margin: 1.7rem 0;
         margin-top: 3rem;
         margin-bottom: 2.5rem;
     }
@@ -21,10 +20,14 @@
         position: relative;
         border: none;
         outline: none;
-        height: 6.5rem;
+        height: 6.3rem;
         width: 50rem;
         border-radius: 15px;
         font-size: 1.7rem;
+
+        @include respond(phone) {
+            width: 33rem;
+        }
     }
 
     button {
@@ -32,13 +35,21 @@
         background: #000;
         border: none;
         outline: none;
-        height: 6.5rem;
+        height: 6.3rem;
         width: 6rem;
         margin-left: -3.4rem;
         position: absolute;
         border-top-right-radius: 15px;
         border-bottom-right-radius: 15px;
         color: #fff;
+
+        @include respond(phone) {
+            margin-left: -6rem;
+        }
+
+        i {
+            font-size: 2.5rem;
+        }
 
         &:hover {
             transform: scale(1.1);
@@ -64,12 +75,24 @@
         display: grid;
         grid-template-columns: repeat(4, 1fr);
 
+        @include respond(phone) {
+            margin-top: 18rem;
+            height: 23rem;
+            width: 33rem;
+            grid-template-columns: 1fr;
+        }
+
         .content {
             align-self: center;
             height: 50%;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+
+            @include respond(phone) {
+                align-items: center;
+                justify-content: center;
+            }
 
             &:not(:last-child) {
                 border-right: solid 1.3px;
