--- a/src/sass/components/head.scss
+++ b/src/sass/components/head.scss
@@ -6,7 +6,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: solid;
 
     h1 {
         font-family: Rubik, sans-serif;
@@ -77,7 +76,7 @@
 
         @include respond(phone) {
             margin-top: 18rem;
-            height: 23rem;
+            height: 30rem;
             width: 33rem;
             grid-template-columns: 1fr;
         }
@@ -107,6 +106,11 @@
                 font-size: 1rem;
                 font-weight: 700;
                 letter-spacing: 2px;
+
+                @include respond(phone) {
+                    margin-left: 0;
+                    margin-top: .7rem;
+                }
             }
 
             .box {
@@ -118,6 +122,12 @@
                     font-family: Open Sans, sans-serif;
                     font-size: 2rem;
                     font-weight: 700;
+
+                    @include respond(phone) {
+                        margin-left: 0;
+                        font-size: 1.8rem;
+                        margin-top: .5rem;
+                    }
                 }
             }
         }
